[iOS] Log how often media element playback happens using FeatureCounter https://bugs.webkit.org/show_bug.cgi?id=139819 <rdar://problem/19309988>

Reviewed by Eric Carlson.

Log using FeatureCounter how often we start loading for audio / video
elements, and how often they end up being played.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement):
Add flag to identify when a media element starts playing for the first
time.

(WebCore::HTMLMediaElement::loadResource):
Log when a media element starts loading.

(WebCore::HTMLMediaElement::updatePlayState):
Log when a media element starts playing for the first time.

* html/HTMLMediaElement.h:
Add flag to identify when a media element starts playing for the first
time.

* platform/FeatureCounterKeys.h:
Add FeatureCounter keys for HTMLMediaElement loading / playback.


Canonical link: https://commits.webkit.org/157754@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177591 268f45cc-cd09-0410-ab3c-d52691b4dbfc